fix too much bug

--- a/src/components/StorageModule/style/storage.less
+++ b/src/components/StorageModule/style/storage.less
@@ -115,23 +115,7 @@
       width: 12%;
       padding-left: 10px;
       button {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        width: 90px;
-        height: 30px;
         overflow: hidden;
-        padding-left: 0;
-        // padding: 5px 10px;
-        // float: left;
-        .h {
-          width: 60px;
-          float: left;
-          border-right: 1px solid #d9d9d9;
-          height: 40px;
-          margin-top: -5px;
-          line-height: 30px;
-          margin-right: 7px;
-        }
       }
     }
     .dataBox {
